--- a/samples/bluetooth/broadcast_audio_sink/prj.conf
+++ b/samples/bluetooth/broadcast_audio_sink/prj.conf
@@ -4,6 +4,7 @@ CONFIG_BT_AUDIO=y
 CONFIG_BT_SMP=y
 CONFIG_BT_PAC_SNK=y
 CONFIG_BT_PERIPHERAL=y
+CONFIG_BT_BAP_SCAN_DELEGATOR=y
 CONFIG_BT_AUDIO_BROADCAST_SINK=y
 
 CONFIG_BT_DEVICE_NAME="Broadcast Audio Sink"
